--- a/rpa-certificates-of-free-sale/Data Workflows/Word/EnterCertificateDetails.xaml
+++ b/rpa-certificates-of-free-sale/Data Workflows/Word/EnterCertificateDetails.xaml
@@ -13,11 +13,12 @@
     <x:Property Name="OUT_boolSpanDioxinCompleted" Type="OutArgument(x:Boolean)" />
     <x:Property Name="IN_boolDioxinCompleted" Type="InArgument(x:Boolean)" />
     <x:Property Name="IN_boolSpanDioxinCompleted" Type="InArgument(x:Boolean)" />
+    <x:Property Name="IN_intDioxin_FreeSale_Reference" Type="InArgument(x:Int32)" />
   </x:Members>
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1240,741</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1127,831</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>EnterCertificateDetails_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="22">
@@ -182,7 +183,7 @@
                             <av:PointCollection x:Key="ConnectorLocation">130,1685.5 130,1715.5 300.141666666667,1715.5 300.141666666667,1746.5</av:PointCollection>
                           </scg:Dictionary>
                         </sap:WorkflowViewStateService.ViewState>
-                        <p:WordReplaceText Found="{x:Null}" DisplayName="Replace CompanyAddress" sap:VirtualizedContainerService.HintSize="434,137" sap2010:WorkflowViewState.IdRef="WordReplaceText_3" Replace="[IN_dictAttachmentFields(&quot;CompanyAddress&quot;) + &quot;, &quot; + IN_dictAttachmentFields(&quot;CompanyPostcode&quot;)]" Search="[IN_dictConfig(&quot;CompanyAddress&quot;)]" />
+                        <p:WordReplaceText Found="{x:Null}" DisplayName="Replace CompanyAddress" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="WordReplaceText_3" Replace="[IN_dictAttachmentFields(&quot;CompanyAddress&quot;) + &quot;, &quot; + IN_dictAttachmentFields(&quot;CompanyPostcode&quot;)]" Search="[IN_dictConfig(&quot;CompanyAddress&quot;)]" />
                         <FlowStep.Next>
                           <FlowDecision x:Name="__ReferenceID1" Condition="[IN_dictAttachmentFields(&quot;CertificateType&quot;).Equals(&quot;ANIMAL MANUFACTURING AND FREESALE&quot;)]" DisplayName="Schedule OA?" sap:VirtualizedContainerService.HintSize="79,87" sap2010:WorkflowViewState.IdRef="FlowDecision_6">
                             <sap:WorkflowViewStateService.ViewState>
@@ -194,7 +195,7 @@
                               </scg:Dictionary>
                             </sap:WorkflowViewStateService.ViewState>
                             <FlowDecision.True>
-                              <FlowStep x:Name="__ReferenceID23">
+                              <FlowStep x:Name="__ReferenceID22">
                                 <sap:WorkflowViewStateService.ViewState>
                                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                     <av:Point x:Key="ShapeLocation">30,1817</av:Point>
@@ -315,7 +316,7 @@
                           </FlowDecision>
                         </FlowStep.Next>
                       </FlowStep>
-                      <FlowStep x:Name="__ReferenceID14">
+                      <FlowStep x:Name="__ReferenceID13">
                         <sap:WorkflowViewStateService.ViewState>
                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
                             <av:Point x:Key="ShapeLocation">50,374.5</av:Point>
@@ -325,7 +326,7 @@
                         </sap:WorkflowViewStateService.ViewState>
                         <p:WordReplaceText Found="{x:Null}" DisplayName="Replace Producer" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="WordReplaceText_4" Replace="[IN_dictAttachmentFields(&quot;OrganisationName&quot;)]" Search="[IN_dictConfig(&quot;Producer&quot;)]" />
                         <FlowStep.Next>
-                          <FlowDecision x:Name="__ReferenceID15" Condition="[IN_boolDioxinInProgress = True or IN_dictAttachmentFields(&quot;CertificateType&quot;).Equals(&quot;Non-Alcohol\MANUFACTURING and FREESALE CERT&quot;)]" DisplayName="No Country?" sap:VirtualizedContainerService.HintSize="73,87" sap2010:WorkflowViewState.IdRef="FlowDecision_2">
+                          <FlowDecision x:Name="__ReferenceID14" Condition="[IN_boolDioxinInProgress = True or IN_dictAttachmentFields(&quot;CertificateType&quot;).Equals(&quot;Non-Alcohol\MANUFACTURING and FREESALE CERT&quot;)]" DisplayName="No Country?" sap:VirtualizedContainerService.HintSize="73,87" sap2010:WorkflowViewState.IdRef="FlowDecision_2">
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -347,7 +348,7 @@
                                   </scg:Dictionary>
                                 </sap:WorkflowViewStateService.ViewState>
                                 <FlowDecision.True>
-                                  <FlowStep x:Name="__ReferenceID21">
+                                  <FlowStep x:Name="__ReferenceID20">
                                     <sap:WorkflowViewStateService.ViewState>
                                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                         <av:Point x:Key="ShapeLocation">20,717</av:Point>
@@ -407,7 +408,7 @@
                                           </scg:Dictionary>
                                         </sap:WorkflowViewStateService.ViewState>
                                         <FlowDecision.True>
-                                          <FlowStep x:Name="__ReferenceID25">
+                                          <FlowStep x:Name="__ReferenceID24">
                                             <sap:WorkflowViewStateService.ViewState>
                                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                 <av:Point x:Key="ShapeLocation">30,907</av:Point>
@@ -525,7 +526,7 @@
                                               </If>
                                             </Sequence>
                                             <FlowStep.Next>
-                                              <FlowStep x:Name="__ReferenceID26">
+                                              <FlowStep x:Name="__ReferenceID25">
                                                 <sap:WorkflowViewStateService.ViewState>
                                                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                     <av:Point x:Key="ShapeLocation">30,1008.5</av:Point>
@@ -649,20 +650,27 @@
                                                         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                         <av:Point x:Key="ShapeLocation">255,1116.5</av:Point>
                                                         <av:Size x:Key="ShapeSize">70,87</av:Size>
-                                                        <av:PointCollection x:Key="TrueConnector">255,1160 130,1160 130,1204.5</av:PointCollection>
+                                                        <av:PointCollection x:Key="TrueConnector">255,1160 140,1160 140,1230</av:PointCollection>
                                                         <av:PointCollection x:Key="FalseConnector">325,1160 570,1160 570,1196.5</av:PointCollection>
                                                       </scg:Dictionary>
                                                     </sap:WorkflowViewStateService.ViewState>
                                                     <FlowDecision.True>
-                                                      <FlowStep x:Name="__ReferenceID13">
+                                                      <FlowStep x:Name="__ReferenceID26">
                                                         <sap:WorkflowViewStateService.ViewState>
                                                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                                            <av:Point x:Key="ShapeLocation">30,1204.5</av:Point>
+                                                            <av:Point x:Key="ShapeLocation">40,1230</av:Point>
                                                             <av:Size x:Key="ShapeSize">200,51</av:Size>
-                                                            <av:PointCollection x:Key="ConnectorLocation">130,1255.5 130,1285.5 295.641666666667,1285.5 295.641666666667,1526.5</av:PointCollection>
+                                                            <av:PointCollection x:Key="ConnectorLocation">140,1281 140,1311 295.641666666667,1311 295.641666666667,1526.5</av:PointCollection>
                                                           </scg:Dictionary>
                                                         </sap:WorkflowViewStateService.ViewState>
-                                                        <p:WordReplaceText Found="{x:Null}" DisplayName="Replace TRD Number" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="WordReplaceText_6" Replace="[IN_strReferenceNumber]" Search="[IN_dictConfig(&quot;TRD&quot;)]" />
+                                                        <If Condition="[IN_intDioxin_FreeSale_Reference=0]" DisplayName="If - add reference to free sale certificate for Dioxin only" sap:VirtualizedContainerService.HintSize="913,285" sap2010:WorkflowViewState.IdRef="If_23">
+                                                          <If.Then>
+                                                            <p:WordReplaceText Found="{x:Null}" DisplayName="Replace TRD Number" sap:VirtualizedContainerService.HintSize="434,137" sap2010:WorkflowViewState.IdRef="WordReplaceText_38" Replace="[IN_strReferenceNumber]" Search="[IN_dictConfig(&quot;TRD&quot;)]" />
+                                                          </If.Then>
+                                                          <If.Else>
+                                                            <p:WordReplaceText Found="{x:Null}" DisplayName="Replace TRD Number" sap:VirtualizedContainerService.HintSize="434,137" sap2010:WorkflowViewState.IdRef="WordReplaceText_39" Replace="[IN_strReferenceNumber &amp; &quot;-&quot; &amp; IN_intDioxin_FreeSale_Reference]" Search="[IN_dictConfig(&quot;TRD&quot;)]" />
+                                                          </If.Else>
+                                                        </If>
                                                         <FlowStep.Next>
                                                           <FlowDecision x:Name="__ReferenceID2" Condition="[IN_dictAttachmentFields(&quot;CertificateType&quot;).Equals(&quot;DIOXIN FREE STATUS&quot;)]" DisplayName="Address?" sap:VirtualizedContainerService.HintSize="70,87" sap2010:WorkflowViewState.IdRef="FlowDecision_7" True="{x:Reference __ReferenceID0}" False="{x:Reference __ReferenceID1}">
                                                             <sap:WorkflowViewStateService.ViewState>
@@ -679,7 +687,7 @@
                                                       </FlowStep>
                                                     </FlowDecision.True>
                                                     <FlowDecision.False>
-                                                      <FlowDecision x:Name="__ReferenceID17" Condition="[IN_dictAttachmentFields(&quot;AdditionalHeader&quot;).Equals(&quot;&quot;)]" DisplayName="No Additional Header?" sap:VirtualizedContainerService.HintSize="126,87" sap2010:WorkflowViewState.IdRef="FlowDecision_9">
+                                                      <FlowDecision x:Name="__ReferenceID16" Condition="[IN_dictAttachmentFields(&quot;AdditionalHeader&quot;).Equals(&quot;&quot;)]" DisplayName="No Additional Header?" sap:VirtualizedContainerService.HintSize="126,87" sap2010:WorkflowViewState.IdRef="FlowDecision_9">
                                                         <sap:WorkflowViewStateService.ViewState>
                                                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -690,7 +698,7 @@
                                                           </scg:Dictionary>
                                                         </sap:WorkflowViewStateService.ViewState>
                                                         <FlowDecision.True>
-                                                          <FlowStep x:Name="__ReferenceID19">
+                                                          <FlowStep x:Name="__ReferenceID18">
                                                             <sap:WorkflowViewStateService.ViewState>
                                                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                                 <av:Point x:Key="ShapeLocation">360,1314.5</av:Point>
@@ -706,7 +714,7 @@
                                                               </p:WordReplaceText.Replace>
                                                             </p:WordReplaceText>
                                                             <FlowStep.Next>
-                                                              <FlowStep x:Name="__ReferenceID20">
+                                                              <FlowStep x:Name="__ReferenceID19">
                                                                 <sap:WorkflowViewStateService.ViewState>
                                                                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                                     <av:Point x:Key="ShapeLocation">360,1415.5</av:Point>
@@ -729,7 +737,7 @@
                                                           </FlowStep>
                                                         </FlowDecision.True>
                                                         <FlowDecision.False>
-                                                          <FlowStep x:Name="__ReferenceID18">
+                                                          <FlowStep x:Name="__ReferenceID17">
                                                             <sap:WorkflowViewStateService.ViewState>
                                                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                                 <av:Point x:Key="ShapeLocation">670,1296.58</av:Point>
@@ -901,7 +909,7 @@
                                                               </If>
                                                             </Sequence>
                                                             <FlowStep.Next>
-                                                              <FlowStep x:Name="__ReferenceID24">
+                                                              <FlowStep x:Name="__ReferenceID23">
                                                                 <sap:WorkflowViewStateService.ViewState>
                                                                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                                     <av:Point x:Key="ShapeLocation">670,1407</av:Point>
@@ -1059,7 +1067,6 @@
                         </FlowStep.Next>
                       </FlowStep>
                       <x:Reference>__ReferenceID12</x:Reference>
-                      <x:Reference>__ReferenceID13</x:Reference>
                       <FlowDecision x:Name="__ReferenceID27" Condition="[IN_boolDioxinInProgress = True or IN_dictAttachmentFields(&quot;CertificateType&quot;).Equals(&quot;ANIMAL MANUFACTURING AND FREESALE&quot;)]" DisplayName="No Product?" sap:VirtualizedContainerService.HintSize="72,87" sap2010:WorkflowViewState.IdRef="FlowDecision_1">
                         <sap:WorkflowViewStateService.ViewState>
                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -1071,7 +1078,7 @@
                           </scg:Dictionary>
                         </sap:WorkflowViewStateService.ViewState>
                         <FlowDecision.True>
-                          <FlowDecision x:Name="__ReferenceID16" Condition="[IN_dictAttachmentFields(&quot;CertificateType&quot;).ToLower.Contains(&quot;alcohol&quot;) Or (IN_dictAttachmentFields(&quot;Consignment&quot;).Equals(&quot;C2&quot;) And Not IN_dictAttachmentFields(&quot;CertificateType&quot;).equals(&quot;ANIMAL FREESALE&quot;))]" DisplayName="No Producer?" sap:VirtualizedContainerService.HintSize="78,87" sap2010:WorkflowViewState.IdRef="FlowDecision_3" True="{x:Reference __ReferenceID14}" False="{x:Reference __ReferenceID15}">
+                          <FlowDecision x:Name="__ReferenceID15" Condition="[IN_dictAttachmentFields(&quot;CertificateType&quot;).ToLower.Contains(&quot;alcohol&quot;) Or (IN_dictAttachmentFields(&quot;Consignment&quot;).Equals(&quot;C2&quot;) And Not IN_dictAttachmentFields(&quot;CertificateType&quot;).equals(&quot;ANIMAL FREESALE&quot;))]" DisplayName="No Producer?" sap:VirtualizedContainerService.HintSize="78,87" sap2010:WorkflowViewState.IdRef="FlowDecision_3" True="{x:Reference __ReferenceID13}" False="{x:Reference __ReferenceID14}">
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -1084,7 +1091,7 @@
                           </FlowDecision>
                         </FlowDecision.True>
                         <FlowDecision.False>
-                          <FlowStep x:Name="__ReferenceID22">
+                          <FlowStep x:Name="__ReferenceID21">
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                 <av:Point x:Key="ShapeLocation">420,197</av:Point>
@@ -1216,18 +1223,19 @@
                               </If>
                             </Sequence>
                             <FlowStep.Next>
-                              <x:Reference>__ReferenceID16</x:Reference>
+                              <x:Reference>__ReferenceID15</x:Reference>
                             </FlowStep.Next>
                           </FlowStep>
                         </FlowDecision.False>
                       </FlowDecision>
-                      <x:Reference>__ReferenceID16</x:Reference>
                       <x:Reference>__ReferenceID15</x:Reference>
+                      <x:Reference>__ReferenceID14</x:Reference>
                       <x:Reference>__ReferenceID11</x:Reference>
                       <x:Reference>__ReferenceID10</x:Reference>
                       <x:Reference>__ReferenceID9</x:Reference>
                       <x:Reference>__ReferenceID2</x:Reference>
                       <x:Reference>__ReferenceID1</x:Reference>
+                      <x:Reference>__ReferenceID16</x:Reference>
                       <x:Reference>__ReferenceID17</x:Reference>
                       <x:Reference>__ReferenceID18</x:Reference>
                       <x:Reference>__ReferenceID19</x:Reference>
