--- a/rpa-certificates-of-free-sale/Logic Workflows/ProcessChildCase.xaml
+++ b/rpa-certificates-of-free-sale/Logic Workflows/ProcessChildCase.xaml
@@ -23,7 +23,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1157,830</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1127,831</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ProcessChildCase_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="23">
@@ -129,6 +129,7 @@
           <Variable x:TypeArguments="x:Boolean" Name="boolMultiCerts" />
           <Variable x:TypeArguments="x:Boolean" Name="boolSpanDioxinCompleted" />
           <Variable x:TypeArguments="x:Boolean" Name="boolSpanDioxinInProgress" />
+          <Variable x:TypeArguments="x:Int32" Name="intDioxin_FreeSale_Reference" />
         </Flowchart.Variables>
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -189,16 +190,16 @@
                       <av:PointCollection x:Key="ConnectorLocation">630,2025.5 630,2086.5</av:PointCollection>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <TryCatch DisplayName="Try EnterCertificateDetails" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="TryCatch_15">
+                  <TryCatch DisplayName="Try EnterCertificateDetails" sap:VirtualizedContainerService.HintSize="438,968" sap2010:WorkflowViewState.IdRef="TryCatch_15">
                     <TryCatch.Try>
-                      <Sequence sap:VirtualizedContainerService.HintSize="391,741" sap2010:WorkflowViewState.IdRef="Sequence_50">
+                      <Sequence sap:VirtualizedContainerService.HintSize="392,741" sap2010:WorkflowViewState.IdRef="Sequence_50">
                         <sap:WorkflowViewStateService.ViewState>
                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
                             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                           </scg:Dictionary>
                         </sap:WorkflowViewStateService.ViewState>
-                        <ui:KillProcess ContinueOnError="{x:Null}" Process="{x:Null}" DisplayName="Kill Process - Word" sap:VirtualizedContainerService.HintSize="349,22" sap2010:WorkflowViewState.IdRef="KillProcess_4" ProcessName="WINWORD" />
-                        <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke EnterCertificateDetails" sap:VirtualizedContainerService.HintSize="349,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_15" UnSafe="False" WorkflowFileName="Data Workflows\Word\EnterCertificateDetails.xaml">
+                        <ui:KillProcess ContinueOnError="{x:Null}" Process="{x:Null}" DisplayName="Kill Process - Word" sap:VirtualizedContainerService.HintSize="350,22" sap2010:WorkflowViewState.IdRef="KillProcess_4" ProcessName="WINWORD" />
+                        <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke EnterCertificateDetails" sap:VirtualizedContainerService.HintSize="350,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_15" UnSafe="False" WorkflowFileName="Data Workflows\Word\EnterCertificateDetails.xaml">
                           <ui:InvokeWorkflowFile.Arguments>
                             <InArgument x:TypeArguments="x:String" x:Key="IN_strCertificatePath">
                               <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strCertificatePath" />
@@ -239,6 +240,9 @@
                             <InArgument x:TypeArguments="x:Boolean" x:Key="IN_boolSpanDioxinCompleted">
                               <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="boolSpanDioxinCompleted" />
                             </InArgument>
+                            <InArgument x:TypeArguments="x:Int32" x:Key="IN_intDioxin_FreeSale_Reference">
+                              <mva:VisualBasicValue x:TypeArguments="x:Int32" ExpressionText="intDioxin_FreeSale_Reference" />
+                            </InArgument>
                           </ui:InvokeWorkflowFile.Arguments>
                           <sap:WorkflowViewStateService.ViewState>
                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -246,7 +250,7 @@
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
                         </ui:InvokeWorkflowFile>
-                        <Assign DisplayName="Assign - spanDioxin in progress to false" sap:VirtualizedContainerService.HintSize="349,60" sap2010:WorkflowViewState.IdRef="Assign_98">
+                        <Assign DisplayName="Assign - spanDioxin in progress to false" sap:VirtualizedContainerService.HintSize="350,60" sap2010:WorkflowViewState.IdRef="Assign_98">
                           <Assign.To>
                             <OutArgument x:TypeArguments="x:Boolean">[boolSpanDioxinInProgress]</OutArgument>
                           </Assign.To>
@@ -254,7 +258,7 @@
                             <InArgument x:TypeArguments="x:Boolean">False</InArgument>
                           </Assign.Value>
                         </Assign>
-                        <Assign DisplayName="Assign - dioxin in progress to false" sap:VirtualizedContainerService.HintSize="349,60" sap2010:WorkflowViewState.IdRef="Assign_99">
+                        <Assign DisplayName="Assign - dioxin in progress to false" sap:VirtualizedContainerService.HintSize="350,60" sap2010:WorkflowViewState.IdRef="Assign_99">
                           <Assign.To>
                             <OutArgument x:TypeArguments="x:Boolean">[boolDioxinInProgress]</OutArgument>
                           </Assign.To>
@@ -262,7 +266,7 @@
                             <InArgument x:TypeArguments="x:Boolean">False</InArgument>
                           </Assign.Value>
                         </Assign>
-                        <Assign DisplayName="Assign OUT_intCertificateCounter" sap:VirtualizedContainerService.HintSize="349,60" sap2010:WorkflowViewState.IdRef="Assign_77">
+                        <Assign DisplayName="Assign OUT_intCertificateCounter" sap:VirtualizedContainerService.HintSize="350,60" sap2010:WorkflowViewState.IdRef="Assign_77">
                           <Assign.To>
                             <OutArgument x:TypeArguments="x:Int32">[intCertificateCounter]</OutArgument>
                           </Assign.To>
@@ -270,7 +274,7 @@
                             <InArgument x:TypeArguments="x:Int32">[intCertificateCounter + 1]</InArgument>
                           </Assign.Value>
                         </Assign>
-                        <Assign DisplayName="Assign retry counter" sap:VirtualizedContainerService.HintSize="349,60" sap2010:WorkflowViewState.IdRef="Assign_66">
+                        <Assign DisplayName="Assign retry counter" sap:VirtualizedContainerService.HintSize="350,60" sap2010:WorkflowViewState.IdRef="Assign_66">
                           <Assign.To>
                             <OutArgument x:TypeArguments="x:Int32">[intRetryCounter]</OutArgument>
                           </Assign.To>
@@ -278,7 +282,7 @@
                             <InArgument x:TypeArguments="x:Int32">0</InArgument>
                           </Assign.Value>
                         </Assign>
-                        <Assign DisplayName="Assign ExceptionCurrent" sap:VirtualizedContainerService.HintSize="349,60" sap2010:WorkflowViewState.IdRef="Assign_67">
+                        <Assign DisplayName="Assign ExceptionCurrent" sap:VirtualizedContainerService.HintSize="350,60" sap2010:WorkflowViewState.IdRef="Assign_67">
                           <Assign.To>
                             <OutArgument x:TypeArguments="s:Exception">[exceptionCurrent]</OutArgument>
                           </Assign.To>
@@ -403,10 +407,7 @@
                                     </FlowStep>
                                   </FlowDecision.True>
                                   <FlowDecision.False>
-                                    <FlowDecision x:Name="__ReferenceID58" DisplayName="Spanish Dioxin?" sap:VirtualizedContainerService.HintSize="88,87" sap2010:WorkflowViewState.IdRef="FlowDecision_51">
-                                      <FlowDecision.Condition>
-                                        <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="dictAttachmentFields(&quot;Dioxin&quot;).ToLower.Equals(&quot;true&quot;) and boolSpanDioxinCompleted = False and dictAttachmentFields(&quot;Spanish&quot;).ToLower.Equals(&quot;true&quot;)" />
-                                      </FlowDecision.Condition>
+                                    <FlowDecision x:Name="__ReferenceID58" Condition="[dictAttachmentFields(&quot;Dioxin&quot;).ToLower.Equals(&quot;true&quot;) and boolSpanDioxinCompleted = False and dictAttachmentFields(&quot;Spanish&quot;).ToLower.Equals(&quot;true&quot;)]" DisplayName="Spanish Dioxin?" sap:VirtualizedContainerService.HintSize="88,87" sap2010:WorkflowViewState.IdRef="FlowDecision_51">
                                       <sap:WorkflowViewStateService.ViewState>
                                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -529,7 +530,7 @@
                                                   </sap:WorkflowViewStateService.ViewState>
                                                   <TryCatch DisplayName="Try FindCertificateTemplate" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="TryCatch_12">
                                                     <TryCatch.Try>
-                                                      <Sequence sap:VirtualizedContainerService.HintSize="376,379" sap2010:WorkflowViewState.IdRef="Sequence_34">
+                                                      <Sequence sap:VirtualizedContainerService.HintSize="376,551" sap2010:WorkflowViewState.IdRef="Sequence_34">
                                                         <sap:WorkflowViewStateService.ViewState>
                                                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -556,6 +557,19 @@
                                                             </scg:Dictionary>
                                                           </sap:WorkflowViewStateService.ViewState>
                                                         </ui:InvokeWorkflowFile>
+                                                        <Assign sap2010:Annotation.AnnotationText="Change requested&#xA;the TRD number inside the dioxin must match the free sale certificate number if its a dioxin" DisplayName="save free sale number" sap:VirtualizedContainerService.HintSize="334,132" sap2010:WorkflowViewState.IdRef="Assign_104">
+                                                          <Assign.To>
+                                                            <OutArgument x:TypeArguments="x:Int32">[intDioxin_FreeSale_Reference]</OutArgument>
+                                                          </Assign.To>
+                                                          <Assign.Value>
+                                                            <InArgument x:TypeArguments="x:Int32">[intCertificateCounter]</InArgument>
+                                                          </Assign.Value>
+                                                          <sap:WorkflowViewStateService.ViewState>
+                                                            <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                                                              <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
+                                                            </scg:Dictionary>
+                                                          </sap:WorkflowViewStateService.ViewState>
+                                                        </Assign>
                                                         <Assign DisplayName="Assign retry counter" sap:VirtualizedContainerService.HintSize="334,60" sap2010:WorkflowViewState.IdRef="Assign_47">
                                                           <Assign.To>
                                                             <OutArgument x:TypeArguments="x:Int32">[intRetryCounter]</OutArgument>
